--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-query-devtools": "^5.68.0",
     "@tanstack/react-table": "^8.21.2",
+    "@types/leaflet": "^1.9.17",
     "@types/plotly.js": "^2.35.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -50,6 +51,7 @@
     "input-otp": "^1.4.1",
     "jspdf": "^3.0.0",
     "jszip": "^3.10.1",
+    "leaflet": "^1.9.4",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.454.0",
     "next": "^15.1.6",
@@ -61,6 +63,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^5.0.0",
     "react-plotly.js": "^2.6.0",
     "recharts": "^2.15.1",
     "sonner": "^1.7.1",
