--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "leaflet": "^1.9.4",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.454.0",
+    "mapbox-gl": "^3.11.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.6",
     "plotly.js": "^3.0.1",
